--- a/CompanyX.html
+++ b/CompanyX.html
@@ -23,7 +23,7 @@
             <h1>CompanyX</h1>
         </div>
         <div class="home-image">
-            <img src="Untitled.png">
+            <img src="northernlights.jpg">
         </div>
         <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore atque iure
