--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 
         <div class="contact-container">
             <div class="contact-info">
-                <p class="visit-text">Visit us at:</p>
+                <p>Visit us at:</p>
                 <p>CompanyX</p>
                 <p>Karaportti 2</p>
                 <p>02340 ESPOO</p>
@@ -32,8 +32,8 @@
                 <p>Phone: <strong>+358 45 1234567</strong></p>
             </div>
 
-            <div class="map-placeholder">
-                MAP
+            <div class="map">
+                <img src="sijainti.png">
             </div>
         </div>
     </main>
