--- a/Products.html
+++ b/Products.html
@@ -20,7 +20,7 @@
 
     <main>
         <div class="home-image">
-            <img src="Untitled.png">
+            <img src="northernlights.jpg">
         </div>
         <p class="description">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates error ipsum autem officia eveniet nostrum.
@@ -30,21 +30,27 @@
 <div class="products-grid">
     <div class="product-card">
         <h2>Product 1</h2>
-        <div class="product-image">IMG</div>
+        <div class="product-image">
+            <img src="auttikongas1.jpg">
+        </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
         </p>
     </div>
     <div class="product-card">
         <h2>Product 2</h2>
-        <div class="product-image">IMG</div>
+        <div class="product-image">
+            <img src="loska.jpg">
+        </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
         </p>
     </div>
     <div class="product-card">
         <h2>Product 3</h2>
-        <div class="product-image">IMG</div>
+        <div class="product-image">
+            <img src="iglu.jpg">
+        </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
         </p>
