--- a/CompanyX.html
+++ b/CompanyX.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CompanyX</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
     <div class="logo">
@@ -23,7 +27,7 @@
             <h1>CompanyX</h1>
         </div>
         <div class="home-image">
-            <img src="northernlights.jpg">
+            <img src="northernlights.jpg" alt="Beautiful northern lights">
         </div>
         <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore atque iure
