--- a/Products.html
+++ b/Products.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CompanyX Products</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,11 +30,11 @@
             Praesentium deleniti animi possimus porro, voluptatibus quos ipsam id voluptatem distinctio rem voluptatum autem enim?
         </p>
 
-<div class="products-grid">
+<div class="products-layout">
     <div class="product-card">
         <h2>Product 1</h2>
         <div class="product-image">
-            <img src="auttikongas1.jpg">
+            <img src="auttikongas1.jpg" alt="Finnish nature">
         </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
@@ -40,7 +43,7 @@
     <div class="product-card">
         <h2>Product 2</h2>
         <div class="product-image">
-            <img src="loska.jpg">
+            <img src="loska.jpg" alt="Actual finnish winter">
         </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
@@ -49,7 +52,7 @@
     <div class="product-card">
         <h2>Product 3</h2>
         <div class="product-image">
-            <img src="iglu.jpg">
+            <img src="iglu.jpg" alt="Igloo hotels">
         </div>
         <p class="product-description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos ipsam distinctio.
