--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CompanyX Contacts</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,9 +22,9 @@
     </header>
 
     <main class="contact-main">
-        <h1 class="contact-title">Contact us</h1>
+        <h1 class="contact-us">Contact us</h1>
 
-        <div class="contact-container">
+        <div class="contact-styling">
             <div class="contact-info">
                 <p>Visit us at:</p>
                 <p>CompanyX</p>
@@ -33,7 +36,7 @@
             </div>
 
             <div class="map">
-                <img src="sijainti.png">
+                <img src="sijainti.png" alt="Location on map">
             </div>
         </div>
     </main>
